// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error => без рекламы (платный пользователь) 1`] = `
<div
  class="error error-page"
>
  <div
    class="error__icon error__icon_warning"
  />
  <div
    class="error__description"
  >
    <span>
      Сервер временно недоступен,
попробуйте обновить страницу
    </span>
  </div>
</div>
`;

exports[`error => битая ссылка или распубликованный файл 1`] = `
<div
  class="error error-page"
>
  <div
    class="error__icon error__icon_broken-link"
  />
  <div
    class="error__title"
  >
    <span>
      Ничего не найдено
    </span>
  </div>
  <div
    class="error__description"
  >
    <span>
      Владелец удалил файлы либо закрыл к ним доступ
или в ссылке опечатка.
    </span>
  </div>
  <div
    class="direct-public__bottom-direct-wrapper"
  >
    <div
      class="direct direct-public direct-public_platform_desktop direct-public_position_bottom direct-public_error"
    />
    <lego-components_link
      classname="direct-public__purchase"
      href="https://disk.yandex.ru/tuning"
      target="_blank"
      theme="normal"
    >
      Отключить рекламу
    </lego-components_link>
  </div>
</div>
`;

exports[`error => заблокированный файл 1`] = `
<div
  class="error error-page"
>
  <div
    class="error__icon error__icon_blocked"
  />
  <div
    class="error__title"
  >
    <span>
      Ссылка заблокирована
    </span>
  </div>
  <div
    class="error__description"
  >
    <span>
      Файл заблокирован за нарушение условий размещения пользовательского контента на сервисах Яндекса.
    </span>
  </div>
  <lego-components_link
    href="https://yandex.ru/legal/disk_termsofuse/"
    rel="noopener noreferrer"
    target="_blank"
    theme="normal"
  >
    <span>
      Подробности
    </span>
  </lego-components_link>
  <div
    class="direct-public__bottom-direct-wrapper"
  >
    <div
      class="direct direct-public direct-public_platform_desktop direct-public_position_bottom direct-public_error"
    />
    <lego-components_link
      classname="direct-public__purchase"
      href="https://disk.yandex.ru/tuning"
      target="_blank"
      theme="normal"
    >
      Отключить рекламу
    </lego-components_link>
  </div>
</div>
`;

exports[`error => ошибка сервера 1`] = `
<div
  class="error error-page"
>
  <div
    class="error__icon error__icon_warning"
  />
  <div
    class="error__description"
  >
    <span>
      Сервер временно недоступен,
попробуйте обновить страницу
    </span>
  </div>
  <div
    class="direct-public__bottom-direct-wrapper"
  >
    <div
      class="direct direct-public direct-public_platform_desktop direct-public_position_bottom direct-public_error"
    />
    <lego-components_link
      classname="direct-public__purchase"
      href="https://disk.yandex.ru/tuning"
      target="_blank"
      theme="normal"
    >
      Отключить рекламу
    </lego-components_link>
  </div>
</div>
`;
